--- a/web/package.json
+++ b/web/package.json
@@ -11,6 +11,7 @@
     "@chakra-ui/react": "^1.8.3",
     "@emotion/react": "^11.7.1",
     "@emotion/styled": "^11.6.0",
+    "big.js": "^6.1.1",
     "framer-motion": "^6.2.6",
     "i": "^0.3.7",
     "lorem-ipsum": "^2.0.4",
